[package]
name = "shutdown-scheduler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
fltk = "1.3.30"
humantime = "2.1.0"
system_shutdown = "4.0.1"
tokio = { version = "1.25.0", features = ["time", "rt", "macros", "rt-multi-thread", "fs", "sync"] }
