[package]
name = "shutdown-scheduler"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
chrono = "0.4.31"
open = "5.0.0"
slint = { version = "1.2.2", features = ["software-renderer-systemfonts"] }
system_shutdown = "4.0.1"
